@@ -1,1 +1,7 @@
 # The-Last-of-Us-Legacy
+
+## Dependencies
+* Java used:  17.0.5
+* JavaFx
+* JUnit (not necessary)
+* Add this to vm-arguments: `--module-path "/path/to/javafx-sdk/lib" --add-modules javafx.controls,javafx.fxml --module-path "/path/to/javafx-sdk/lib" --add-modules javafx.controls,javafx.fxml,javafx.media`
